package ecourse.base.eCourseSystemUser;

import jdk.jfr.Enabled;

public enum UserStatus {

    ENABLE, DISABLE;


}
